[package]
name = "punch"
version = "0.1.0"
authors = ["mo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
csv = "1.1.3"
chrono = "0.4"
dirs = "2.0.2"
error-chain = "0.12.2"
ansi_term = "0.12.1"