[package]
name = "pnch"
version = "0.4.1"
authors = ["Moritz Hoffmann <mohoff@web.de>"]
description = "Simple time tracking from the command line"
documentation = "https://github.com/mohoff/punch"
homepage = "https://github.com/mohoff/punch"
repository = "https://github.com/mohoff/punch"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["timetracking", "productivity"]
edition = "2018"

[[bin]]
name = "punch"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
csv = "1.1.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "2.0.2"
error-chain = "0.12.2"
ansi_term = "0.12.1"
colored = "1.9.3"
